@@ -2113,59 +2113,54 @@ void Launcher::EndIconDrag()
 
 void Launcher::UpdateDragWindowPosition(int x, int y)
 {
-  if (_drag_window)
+  if (!_drag_window)
+    return;
+
+  auto const& icon_geo = _drag_window->GetGeometry();
+  _drag_window->SetBaseXY(x - icon_geo.width / 2, y - icon_geo.height / 2);
+
+  if (!_drag_icon)
+    return;
+
+  auto const& launcher_geo = GetGeometry();
+  auto hovered_icon = MouseIconIntersection((launcher_geo.x + launcher_geo.width) / 2.0, y - GetAbsoluteY());
+  struct timespec current;
+  clock_gettime(CLOCK_MONOTONIC, &current);
+  float progress = DragThresholdProgress(current);
+
+  // Icons of different types can't be mixed, so let's avoid this.
+  if (hovered_icon && hovered_icon->GetIconType() != _drag_icon->GetIconType())
+    hovered_icon = nullptr;
+
+  if (hovered_icon && _drag_icon != hovered_icon)
   {
-    nux::Geometry const& geo = _drag_window->GetGeometry();
-    _drag_window->SetBaseXY(x - geo.width / 2, y - geo.height / 2);
-
-    AbstractLauncherIcon::Ptr hovered_icon = MouseIconIntersection((int)((GetGeometry().x + GetGeometry().width) / 2.0f), y - GetAbsoluteGeometry().y);
-
-    struct timespec current;
-    clock_gettime(CLOCK_MONOTONIC, &current);
-    if (_drag_icon && hovered_icon && _drag_icon != hovered_icon)
+    if (progress >= 1.0f)
     {
-      float progress = DragThresholdProgress(current);
+      _model->ReorderSmart(_drag_icon, hovered_icon, true);
+    }
+    else if (progress == 0.0f)
+    {
+      _model->ReorderBefore(_drag_icon, hovered_icon, false);
+    }
+  }
+  else if (!hovered_icon && progress == 0.0f)
+  {
+    // If no icon is hovered, then we can add our icon to the bottom
+    for (auto it = _model->main_rbegin(); it != _model->main_rend(); ++it)
+    {
+      auto const& icon = *it;
 
-      if (progress >= 1.0f)
-        _model->ReorderSmart(_drag_icon, hovered_icon, true);
-      else if (progress == 0.0f) {
-        if (_drag_icon->GetIconType() == hovered_icon->GetIconType()) {
-          _model->ReorderBefore(_drag_icon, hovered_icon, false);
-        } else {
-          // LauncherModel::ReorderBefore does not work on different icon types
-          // so if hovered_icon is of a different type than _drag_icon
-          // try to use LauncherModel::ReorderAfter with the icon that is before hovered_icon
-          AbstractLauncherIcon::Ptr iconBeforeHover;
-          LauncherModel::iterator it;
-          LauncherModel::iterator prevIt = _model->end();
-          for (it = _model->begin(); it != _model->end(); ++it)
-          {
-            if (!(*it)->GetQuirk(AbstractLauncherIcon::Quirk::VISIBLE) || !(*it)->IsVisibleOnMonitor(monitor))
-              continue;
-
-            if ((*it) == hovered_icon) {
-              if (prevIt != _model->end()) {
-                iconBeforeHover = *prevIt;
-              }
-              break;
-            }
-
-            prevIt = it;
-          }
-
-          if (iconBeforeHover && _drag_icon != iconBeforeHover) {
-            _model->ReorderAfter(_drag_icon, iconBeforeHover);
-          }
-        }
+      if (!icon->GetQuirk(AbstractLauncherIcon::Quirk::VISIBLE) ||
+          !icon->IsVisibleOnMonitor(monitor) ||
+          icon->GetIconType() != _drag_icon->GetIconType())
+      {
+        continue;
       }
 
-      if (progress >= 1.0f)
+      if (y >= icon->GetCenter(monitor).y)
       {
-        _model->ReorderSmart(_drag_icon, hovered_icon, true);
-      }
-      else if (progress == 0.0f)
-      {
-        _model->ReorderBefore(_drag_icon, hovered_icon, false);
+        _model->ReorderAfter(_drag_icon, icon);
+        break;
       }
     }
   }
